max date yesterday

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <nav>
-  <button class="right" mat-raised-button color="primary" (click)="today()">Today</button>
+  <button class="right" mat-raised-button color="primary" (click)="yesterday()">Yesterday</button>
 
   <mat-form-field>
     <mat-label>Choose Date Range</mat-label>
